<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mail</string>
    <string name="action_settings">Settings</string>
    <string name="receive_box">收件箱</string>
    <string name="send_box">发件箱</string>
    <string name="draft_box">草稿箱</string>
    <string name="trash_box">垃圾箱</string>
    <string name="exit_btn">退出</string>
    <string name="newmail">写邮件</string>
    <string name="replay">回复</string>
    <string name="forward">转发</string>
    <string name="send">发送</string>
    <string name="title_activity_mail_list">MailLIstActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="contact">通讯录</string>
    <string name="attach">附件</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="instruments">邮件沟通你我</string>
    <string name="email_address">邮件地址</string>
    <string name="password">密码</string>
    <string name="config">手动配置</string>
    <string name="next">下一步</string>
    <string name="showpassword">显示密码</string>
    <string name="auto_login">自动登录</string>
    <string name="signature">签名</string>
    <string name="subject">主题</string>
    <string name="recipe_address">收件人地址</string>

</resources>