<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
      >
      <TextView
        android:text="@string/instruments"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
          />

    <EditText
        android:id="@+id/account_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/account_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/next"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/account_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showpassword" />

		<View
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:layout_weight="1" />

        <CheckBox
            android:id="@+id/account_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_login" />

    </LinearLayout>
	
    <View
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="54dip"
        android:background="@drawable/bottombar_565"
        >
        <Button
            android:id="@+id/manual_setup"
            android:text="@string/config"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="@dimen/button_minWidth"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            />
        <Button
            android:id="@+id/next"
            android:text="@string/next"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="@dimen/button_minWidth"
            android:drawableRight="@drawable/button_indicator_next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            />
    </RelativeLayout>
</LinearLayout>
