<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00dddd"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/mail_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/recipients"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_weight="3" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/contact"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_weight="3" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/attach"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mail_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" 
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_above="@id/mail_control"
        android:layout_below="@id/mail_Info" 
        android:inputType="textMultiLine"
        />

</RelativeLayout>